--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
 				<!-- Slider Item -->
 				<div class="owl-item home_slider_item">
 					<!-- Image by https://unsplash.com/@@anikindimitry -->
-					<div class="home_slider_background" style="background-image:url(images/home_slider.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/contact_background.jpg)"></div>
 
 					<div class="home_slider_content text-center">
 						<div class="home_slider_content_inner" data-animation-in="flipInX" data-animation-out="animate-out fadeOut">
@@ -57,75 +57,11 @@
 		<div class="container fill_height">
 			<div class="row fill_height">
 				<div class="col fill_height">
-
-					<!-- Search Tabs -->
-
-
-					<!-- Search Panel -->
-
-					<div class="search_panel active">
-						<form action="#" id="search_form_1" class="search_panel_content d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-between justify-content-start">
-							<div class="search_item">
-								<div>Aeroporto de Origem</div>
-								<input type="text" class="destination search_input" required="required">
-							</div>
-							<div class="search_item">
-								<div>Data de Saída</div>
-								<input type="text" class="check_in search_input" placeholder="YYYY-MM-DD">
-							</div>
-							<div class="search_item">
-								<div>Adultos</div>
-								<select name="adults" id="adults_1" class="dropdown_item_select search_input">
-									<option>01</option>
-									<option>02</option>
-									<option>03</option>
-								</select>
-							</div>
-							<button class="button search_button">Solicite<span></span><span></span><span></span></button>
-						</form>
+					<div class="d-flex align-items-center justify-content-around" style="height: 100%;">
+						<a class="btn btn-primary" href="">Ingressos</a>
+						<a class="btn btn-primary" href="">Ingressos</a>
+						<a class="btn btn-primary" href="">Ingressos</a>
 					</div>
-
-
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="search">
-		
-
-		<!-- Search Contents -->
-		
-		<div class="container fill_height">
-			<div class="row fill_height">
-				<div class="col fill_height">
-
-					<!-- Search Tabs -->
-
-
-					<!-- Search Panel -->
-
-					<div class="search_panel active">
-						<form action="#" id="search_form_1" class="search_panel_content d-flex flex-lg-row flex-column align-items-lg-center align-items-start justify-content-lg-between justify-content-start">
-							<div class="search_item">
-								<div>Cidade de Destino</div>
-								<input type="text" class="destination search_input" required="required">
-							</div>
-							<div class="search_item">
-								<div>Data de Volta</div>
-								<input type="text" class="check_in search_input" placeholder="YYYY-MM-DD">
-							</div>
-							<div class="search_item">
-								<div>Crianças</div>
-								<select name="children" id="children_1" class="dropdown_item_select search_input">
-									<option>01</option>
-									<option>02</option>
-									<option>03</option>
-								</select>
-							</div>
-							<button class="button search_button">Solicite<span></span><span></span><span></span></button>
-						</form>
-					</div>
-
 
 				</div>
 			</div>
