--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -41,28 +41,18 @@
 <div class="blog">
 	<div class="container">
 		<div class="row">
-			
-
-			<!-- Blog Content -->
-
-			<div class="col-lg-8">
-
-				<h3>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; é um portal para experiências inesquecíveis ao redor do mundo. Fundada com a paixão por explorar destinos únicos, nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</h3>
-				
-
-				<div class="blog_post_container">
-
-					<!-- Blog Post -->
-
-					<div class="blog_post">
-						<div class="blog_post_image">
-							<img src="../images/coquetel.jpg">
-						</div>
-
+				<div class="blog_post row">
+					<div class="col-md-6 blog_post_image p-0">
+						<img src="../images/coquetel.jpg">
 					</div>
+					<div class="col-md-6">
+						<div class="blog_post_text">
+							<h4>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; 
+								é um portal para experiências inesquecíveis ao redor do mundo. Fundada com a paixão por explorar destinos únicos, 
+								nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</h4>
 
-
-				</div>
+						</div>
+					</div>
 			</div>
 		</div>
 	</div>
