--- a/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
@@ -1,100 +1,95 @@
 @{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
 @section Styles {
-    <link rel="stylesheet" type="text/css" href="~/styles/feedback_styles.css">
-    <link rel="stylesheet" type="text/css" href="~/styles/feedback_responsive.css">
+	<link rel="stylesheet" type="text/css" href="~/styles/feedback_styles.css">
+	<link rel="stylesheet" type="text/css" href="~/styles/feedback_responsive.css">
 }
 
 <!-- Home -->
 
-	<div class="home">
-		<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/feedback.jpg"></div>
-		<div class="home_content">
-			<div class="home_title">Feedback</div>
-		</div>
+<div class="home">
+	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/feedback.jpg"></div>
+	<div class="home_content">
+		<div class="home_title">Feedback</div>
 	</div>
+</div>
 
-	<!-- Blog -->
+<!-- Blog -->
 
-	<div class="blog">
-		<div class="container">
-			<div class="row">
+<div class="blog">
+	<div class="container">
+		<div class="row">
 
-				<!-- Blog Content -->
+			<!-- Blog Content -->
+			<div class="blog_post_container">
 
-				<div class="col-lg-8">
-					
-					<div class="blog_post_container">
-
-						<!-- Blog Post -->
-						
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="../images/feedback1.jpg">
-							</div>
-							<div class="blog_post_title"><a href="#">Fonte do Amor Eterno - Gramado</a></div>
-							<div class="blog_post_text">
-								<p>A Fonte de Amor Eterno fica disponível 24hs por dia e se trata de uma das melhores atrações gratuitas para usufruir em Gramado, como vimos. Qualquer um pode ter acesso à fonte e depositar os cadeados na estrutura que cerca a ponte.
-
-									Por isso é importante você adquirir um cadeado em uma das lojas das proximidades da Fonte do Amor Eterno em Gramado.
-									</p>
-							</div>
-
-						</div>
-
-						<!-- Blog Post -->
-						
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="../images/feedback2.jpeg" alt="https://unsplash.com/@@tschax">
-							</div>
-							<div class="sidebar_title">@@naomi.fs e @@vicentesbarreto</div>
-						</div>
-
-						
-						<!-- Blog Post -->
-						
-						<div class="blog_post">
-							<div class="blog_post_image">
-								<img src="../images/feedback3.jpg" alt="https://unsplash.com/@@tschax">
-							</div>
-							<div class="sidebar_title">Salinas de Maragogi - AL</div>
-						</div>
-
+				<!-- Blog Post -->
+				<div class="blog_post row">
+					<div class="col-md-4 blog_post_image p-0">
+						<img src="../images/feedback/feedback1.jpg">
 					</div>
-				</div>
+					<div class="col-md-8">
+						<div class="blog_post_text">
+							<h4>@@naomi.fs e @@vicentesbarreto</h4>
+							<p>"Estamos muito satisfeitos com a nossa viagem e o trabalho da Amanda,
+								entramos em contato com uma semana de antecedência da data,
+								e rapidamente nosso destino foi escolhido com um roteiro
+								e hotel maravilhoso que nos recebeu indamente para nossa lua de mel”</p>
 
-				<!-- Blog Sidebar -->
+						</div>
+					</div>
 
-				<div class="col-lg-4 sidebar_col">
-
-					<!-- Sidebar Search -->
-					<div class="sidebar_search">
-						<form action="#">
-							</button>
-						</form>
+						<div class="col-md-4 blog_post_image p-0">
+						<img src="../images/feedback/feedback2.jpeg">
 					</div>
 					
-					<!-- Sidebar Archives -->
-					<div class="sidebar_archives">
-						<div class="sidebar_title">@@naomi.fs e @@vicentesbarreto</div>
-						<div class="sidebar_list">
-							<ul>
-								<li><a href="#">"Estamos muito satisfeitos com a nossa viagem e o trabalho da Amanda,
-									entramos em contato com uma semana de antecedência da data,
-									e rapidamente nosso destino foi escolhido com um roteiro
-									e hotel maravilhoso que nos recebeu indamente para nossa lua de mel”</a></li>
-							</ul>
+					<div class="col-md-8">
+						<div class="blog_post_title">
+							<h3>Fonte do Amor Eterno - Gramado</h3>
 						</div>
+						<div class="blog_post_text">
+							<p>A Fonte de Amor Eterno fica disponível 24hs por dia e se trata de uma das melhores
+								atrações gratuitas para usufruir em Gramado, como vimos. Qualquer um pode ter acesso
+								à fonte e depositar os cadeados na estrutura que cerca a ponte.
+
+								Por isso é importante você adquirir um cadeado em uma das lojas das proximidades da
+								Fonte do Amor Eterno em Gramado.
+							</p>
+						</div>	
 					</div>
 
+					<div class="col-md-4 blog_post_image p-0">
+						<img src="../images/feedback/feedback3.jpg">
 					</div>
+					
+					<div class="col-md-8">
+						<div class="blog_post_title">
+							<h3>Salinas Maragogi - AL</h3>
+						</div>
+						<div class="blog_post_text">
+							<p> O Salinas Maragogi All Inclusive Resort está localizado em frente ao mar, 
+								no litoral norte de Alagoas, entre as capitais Recife e Maceió. Oferece academia, 
+								2 piscinas e estacionamento privativo gratuito.
+
+								Com sistema tudo incluído, o Salinas Maragogi serve café da manhã, 
+								almoço e jantar, nas opções buffet e à la carte. 
+								O resort também possui 2 bares com opções de drinks e petiscos.
+							</p>
+						</div>	
+					</div>
+
+					
 				</div>
+			
+				<!-- Blog Post -->
+				
+
 			</div>
 		</div>
 	</div>
+</div>
 
 @section Scripts {
 	<script src="~/js/jquery-3.2.1.min.js"></script>
