--- a/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
@@ -55,7 +55,7 @@ body
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
-	color: #a5a5a5;
+	color: #023959;
 }
 div
 {
@@ -76,7 +76,7 @@ p
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
-	color: #929191;
+	color: #000000;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: #46a6a6 0 0 1px;
 	text-shadow: #46a6a6 0 0 1px;
@@ -107,7 +107,7 @@ p a:active
 }
 p a:hover
 {
-	color: #FFFFFF;
+	color: #000000;
 	background: #ffa07f;
 }
 p a:hover::after
@@ -131,8 +131,8 @@ h1, h2, h3, h4, h5, h6
 {
 	font-family: 'Itim';
 	-webkit-font-smoothing: antialiased;
-	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
-	text-shadow: rgba(0,0,0,.01) 0 0 1px;
+	-webkit-text-shadow: #F2E1AE;
+	text-shadow: #F2E1AE;
 }
 h1::selection, 
 h2::selection, 
@@ -898,7 +898,7 @@ section
 }
 .blog_post_text p
 {
-	color: #929191;
+	color: #000000;
 	line-height: 2.14;
 }
 .blog_post_text p:last-of-type
