--- a/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Feedback.cshtml
@@ -10,7 +10,7 @@
 <!-- Home -->
 
 <div class="home">
-	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/feedback.jpg"></div>
+	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/feedback/feedback.jpg"></div>
 	<div class="home_content">
 		<div class="home_title">Feedback</div>
 	</div>
@@ -27,7 +27,7 @@
 
 				<!-- Blog Post -->
 				<div class="blog_post row">
-					<div class="col-md-4 blog_post_image p-0">
+					<div class="col-md-4 blog_post_image p-0 mb-5">
 						<img src="../images/feedback/feedback1.jpg">
 					</div>
 					<div class="col-md-8">
@@ -41,7 +41,7 @@
 						</div>
 					</div>
 
-						<div class="col-md-4 blog_post_image p-0">
+						<div class="col-md-4 blog_post_image p-0 mb-5">
 						<img src="../images/feedback/feedback2.jpeg">
 					</div>
 					
@@ -64,7 +64,7 @@
 						<img src="../images/feedback/feedback3.jpg">
 					</div>
 					
-					<div class="col-md-8">
+					<div class="col-md-8 mb-5">
 						<div class="blog_post_title">
 							<h3>Salinas Maragogi - AL</h3>
 						</div>
