--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -7,10 +7,10 @@
 	<div class="menu trans_500">
 		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
 			<div class="menu_close_container"><div class="menu_close"></div></div>
-			<div class="logo menu_logo"><a href="#"><img src="images/logo.png" alt=""></a></div>
+			<div class="logo menu_logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
 			<ul>
-				<li class="menu_item"><a href="#">home</a></li>
-				<li class="menu_item"><a href="about.html">Ingrssos</a></li>
+				<li class="menu_item"><a href="index.html">home</a></li>
+				<li class="menu_item"><a href="about.html">Ingressos</a></li>
 				<li class="menu_item"><a href="offers.html">Cruzeiros</a></li>
 				<li class="menu_item"><a href="blog.html">Feedback</a></li>
 				<li class="menu_item"><a href="contact.html">Sobre Nós</a></li>
@@ -31,12 +31,10 @@
 				<!-- Slider Item -->
 				<div class="owl-item home_slider_item">
 					<!-- Image by https://unsplash.com/@@anikindimitry -->
-					<div class="home_slider_background" style="background-image:url(images/contact_background.jpg)"></div>
+					<div class="home_slider_background" style="background-image:url(images/index.jpg)"></div>
 
 					<div class="home_slider_content text-center">
 						<div class="home_slider_content_inner" data-animation-in="flipInX" data-animation-out="animate-out fadeOut">
-							<h1 class="mb-4" style="font-size:48px">O mundo é um livro</h1>
-							<h1 style="font-size:48px">e quem não viaja lê apenas a primeira página</h1>
 							<div class="button home_slider_button"><div class="button_bcg"></div><a href="#">Nosso Blog<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
@@ -49,16 +47,18 @@
 
 	<!-- Search -->
 
-	<div class="search">
+	<div class="search" style="height: fit-content">
 		
 
 		<!-- Search Contents -->
 		
 		<div class="container fill_height">
 			<div class="row fill_height">
-				<div class="col fill_height">
-					<div class="d-flex align-items-center justify-content-around" style="height: 100%;">
-						<a class="btn btn-primary" href="">Ingressos</a>
+				<div class="col fill_height" >
+					<div class="d-flex align-items-center justify-content-around flex-wrap" style="height: 100%;">
+						<a class="btn btn-primary" href="">
+							<img src="" alt="">
+						</a>
 						<a class="btn btn-primary" href="">Ingressos</a>
 						<a class="btn btn-primary" href="">Ingressos</a>
 					</div>
