--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -28,7 +28,7 @@
 <!-- Home -->
 
 <div class="home">
-	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/sobrenos.jpg"></div>
+	<div class="home_background parallax-window" data-parallax="scroll" data-image-src="../images/sobrenos/sobrenos.jpeg"></div>
 	<div class="home_content">
 		<div class="home_title">Sobre Nós</div>
 	</div>
@@ -42,16 +42,38 @@
 	<div class="container">
 		<div class="row">
 				<div class="blog_post row">
-					<div class="col-md-6 blog_post_image p-0">
-						<img src="../images/coquetel.jpg">
+					<div class="col-md-6 blog_post_image p-0 mb-5">
+						<img src="../images/sobrenos/coquetel.jpg">
 					</div>
 					<div class="col-md-6">
-						<div class="blog_post_text">
-							<h4>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; 
+						<div class="blog_post_text" style="text-align:center">
+							<p>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; 
 								é um portal para experiências inesquecíveis ao redor do mundo. Fundada com a paixão por explorar destinos únicos, 
-								nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</h4>
+								nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</p>
 
 						</div>
+					</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+				<div class="blog_post row">
+					<div class="col-md-7">
+						<div class="blog_post_text" style="text-align:center">
+							<p>Nossa missão é ir além das expectativas, 
+								oferecendo um serviço personalizado desde o planejamento até o retorno para casa. 
+								Colocamos a satisfação do cliente no centro de tudo que fazemos, 
+								assegurando que cada detalhe seja cuidadosamente pensado para proporcionar momentos inesquecíveis.</p>
+							<p>Na Amanda Puertas Viagens & Turismo, não vendemos apenas pacotes de viagem; 
+								construímos histórias e criamos memórias duradouras. 
+								Conecte-se conosco e descubra um mundo de possibilidades esperando por você.</p>
+
+						</div>
+					</div>
+					<div class="col-md-5 blog_post_image p-0">
+						<img src="../images/sobrenos/agencia.jpg">
 					</div>
 			</div>
 		</div>
@@ -75,7 +97,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/chile.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/sobrenos/chile.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
 										<div class="test_name text-white">Valle Nevado, Chile</div>
@@ -87,7 +109,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/ancoradouro.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/sobrenos/ancoradouro.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
 										<div class="test_name text-white">Abertura do 27º Encontro Ancoradouro</div>
@@ -99,7 +121,7 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/inauguraçãocruzeiro.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/sobrenos/inauguraçãocruzeiro.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
 										<div class="test_name text-white"> Inauguração do gigante MSC SEAVIEW</div>
@@ -111,10 +133,21 @@
 							<div class="owl-item">
 								<div class="test_item">
 									<div class="test_image">
-										<img src="~/images/SEASHORE.png" alt="https://unsplash.com/@@tschax">
+										<img src="~/images/sobrenos/SEASHORE.png" alt="https://unsplash.com/@@tschax">
 									</div>
 									<div class="test_content_container">
 										<div class="test_name text-white">Inauguração do Navio MSC SEASHORE</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="owl-item">
+								<div class="test_item">
+									<div class="test_image">
+										<img src="~/images/sobrenos/cataratas.jpg" alt="https://unsplash.com/@@tschax">
+									</div>
+									<div class="test_content_container">
+										<div class="test_name text-white">Cataratas do Iguaçu</div>
 									</div>
 								</div>
 							</div>
