--- a/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/feedback_styles.css
@@ -33,7 +33,9 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
 
 
 /*********************************
@@ -42,7 +44,7 @@
 
 *
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -51,7 +53,7 @@
 }
 body
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -72,8 +74,8 @@ ul
 }
 p
 {
-	font-family: 'Itim';
-	font-size: 14px;
+	font-family: 'Roboto';
+	font-size: 15px;
 	line-height: 2;
 	font-weight: 400;
 	color: #000000;
@@ -124,12 +126,12 @@ p::selection
 }
 h1{font-size: 48px;}
 h2{font-size: 36px;}
-h3{font-size: 24px;}
+h3{font-size: 26px;}
 h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Itim';
+	font-family: 'Roboto:ital,wght@0,400;0,700;1';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: #F2E1AE;
 	text-shadow: #F2E1AE;
@@ -450,7 +452,7 @@ section
 }
 .logo a
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -488,8 +490,8 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Itim';
-	font-size: 13px;
+	font-family: 'Roboto';
+	font-size: 14px;
 	font-weight: 600;
 	color: #FFFFFF;
 	text-transform: uppercase;
@@ -664,7 +666,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
@@ -760,7 +762,7 @@ section
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	background-color: #F2E1AE9c;
+	background-color: #F2E1AE60;
 }
 .home_content
 {
