--- a/AmandaViagens/AmandaViagens/wwwroot/styles/ingressos_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/ingressos_styles.css
@@ -39,7 +39,8 @@
 1. Fonts
 ***********/
 
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
 
 /*********************************
 2. Body and some general stuff
@@ -47,7 +48,7 @@
 
 *
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -56,7 +57,7 @@
 }
 body
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -77,7 +78,7 @@ ul
 }
 p
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
@@ -134,7 +135,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -455,7 +456,7 @@ section
 }
 .logo a
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -493,8 +494,8 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Itim';
-	font-size: 13px;
+	font-family: 'Roboto';
+	font-size: 14px;
 	font-weight: 600;
 	color: #FFFFFF;
 	text-transform: uppercase;
@@ -669,7 +670,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
@@ -765,7 +766,7 @@ section
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	background-color: #F2E1AE9c;
+	background-color: #F2E1AE60;
 }
 .home_content
 {
@@ -833,7 +834,7 @@ section
 .rating_5 i:nth-child(4){color: #fa9e1b;}
 .rating_r i::before
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	content: "\f006";
 	font-style: normal;
 	font-size: 19px;
@@ -1203,7 +1204,7 @@ section
 	width: 10px;
 	height: 10px;
 	content: '+';
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 13px;
 	line-height: 8px;
 	color: #FFFFFF;
