--- a/AmandaViagens/AmandaViagens/wwwroot/styles/main_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/main_styles.css
@@ -39,8 +39,8 @@
 /***********
 1. Fonts
 ***********/
-
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,900&display=swap');
 
 /*********************************
 2. Body and some general stuff
@@ -48,7 +48,7 @@
 
 *
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -57,7 +57,7 @@
 }
 body
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -78,7 +78,7 @@ ul
 }
 p
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
@@ -135,7 +135,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Itim';
+	font-family: 'Roboto:ital,wght@0,400;0,700;1';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(0,0,0,.01) 0 0 1px;
 	text-shadow: rgba(0,0,0,.01) 0 0 1px;
@@ -240,7 +240,7 @@ section
 .button
 {
 	display: inline-block;
-	height: 53px;
+	height: 50px;
 	border-radius: 27px;
 	overflow: hidden;
 }
@@ -450,7 +450,7 @@ section
 }
 .logo a
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -488,8 +488,8 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Itim';
-	font-size: 13px;
+	font-family: 'Roboto';
+	font-size: 14px;
 	font-weight: 600;
 	color: #FFFFFF;
 	text-transform: uppercase;
@@ -624,7 +624,7 @@ section
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
-	background: linear-gradient(to right, #fa9e1b, #46a6a6);
+	background: linear-gradient(to right, #F2E1AE, #023959);
 	z-index: 100;
 	opacity: 0;
 	visibility: hidden;
@@ -660,7 +660,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
@@ -808,7 +808,7 @@ section
 }
 .home_slider_content h1:nth-child(2)
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 100px;
 	color: #FFFFFF;
 	margin-top: -34px;
@@ -1344,7 +1344,7 @@ section
 }
 .rating_r i::before
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	content: "\f006";
 	font-style: normal;
 	font-size: 19px;
@@ -1611,10 +1611,11 @@ section
 }
 .test_name
 {
-	font-size: 14px;
+	font-size: 12px;
 	font-weight: 700;
 	color: #2d2c2c;
 	text-transform: uppercase;
+	font-family: 'Roboto';
 }
 .test_date
 {
@@ -1629,6 +1630,7 @@ section
 	font-weight: 500;
 	color: #FFFFFF;
 	padding-left: 3px;
+	font-family: 'Roboto: ital,wght@0,400;0,700;1';
 }
 .test_quote_text
 {
@@ -2148,5 +2150,16 @@ section
 .footer_nav_item a:hover
 {
 	color: #FFFFFF;
+}
+
+.btn-primary
+{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+	padding: 38px 0px ;
+	background-color: #023859;
+	margin: 50px;
+	border-color: #023859;
 }
 
