--- a/AmandaViagens/AmandaViagens/wwwroot/styles/sobre_styles.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/styles/sobre_styles.css
@@ -32,8 +32,7 @@
 /***********
 1. Fonts
 ***********/
-
-@import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 
 /*********************************
@@ -42,7 +41,7 @@
 
 *
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	margin: 0;
 	padding: 0;
 	-webkit-font-smoothing: antialiased;
@@ -51,7 +50,7 @@
 }
 body
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	font-weight: 400;
 	background: #FFFFFF;
@@ -72,7 +71,7 @@ ul
 }
 p
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 14px;
 	line-height: 2;
 	font-weight: 400;
@@ -129,7 +128,7 @@ h4{font-size: 18px;}
 h5{font-size: 14px;}
 h1, h2, h3, h4, h5, h6
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-shadow: rgba(11, 175, 33, 0.733) 0 0 1px;
 	text-shadow: rgba(182, 14, 14, 0.753) 0 0 1px;
@@ -450,7 +449,7 @@ section
 }
 .logo a
 {
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 30px;
 	color: #f4f4f8;
 	font-weight: 800;
@@ -488,8 +487,8 @@ section
 }
 .main_nav_item a
 {
-	font-family: 'Itim';
-	font-size: 13px;
+	font-family: 'Roboto';
+	font-size: 14px;
 	font-weight: 600;
 	color: #FFFFFF;
 	text-transform: uppercase;
@@ -664,7 +663,7 @@ section
 {
 	display: inline-block;
 	position: relative;
-	font-family: 'Itim';
+	font-family: 'Roboto';
 	font-size: 36px;
 	color: #FFFFFF;
 	font-weight: 400;
@@ -760,7 +759,7 @@ section
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	background-color: #F2E1AE9c;
+	background-color: #F2E1AE60;
 }
 .home_content
 {
