--- a/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Sobre.cshtml
@@ -46,7 +46,7 @@
 						<img src="../images/sobrenos/coquetel.jpg">
 					</div>
 					<div class="col-md-6">
-						<div class="blog_post_text" style="text-align:center">
+						<div class="blog_post_text">
 							<p>A Amanda Puertas Viagens & Turismo é muito mais do que uma simples agência de viagens; 
 								é um portal para experiências inesquecíveis ao redor do mundo. Fundada com a paixão por explorar destinos únicos, 
 								nossa agência se destaca por oferecer roteiros personalizados, atendimento dedicado e parcerias exclusivas.</p>
@@ -61,7 +61,7 @@
 		<div class="row">
 				<div class="blog_post row">
 					<div class="col-md-7">
-						<div class="blog_post_text" style="text-align:center">
+						<div class="blog_post_text" >
 							<p>Nossa missão é ir além das expectativas, 
 								oferecendo um serviço personalizado desde o planejamento até o retorno para casa. 
 								Colocamos a satisfação do cliente no centro de tudo que fazemos, 
@@ -74,6 +74,24 @@
 					</div>
 					<div class="col-md-5 blog_post_image p-0">
 						<img src="../images/sobrenos/agencia.jpg">
+					</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+				<div class="blog_post row">
+					<div class="col-md-6 blog_post_image p-0 mb-5">
+						<img src="../images/sobrenos/cleide.png">
+					</div>
+					<div class="col-md-6">
+						<div class="blog_post_text" >
+							<p>Centrais de Atendimento:<br>
+							Suporte Pós Venda - (14) 3641-3906<br>
+							Dúvidas, Críticas ou Sugestões - contato@amandapuertas.com.br</p>
+
+						</div>
 					</div>
 			</div>
 		</div>
