--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -4,19 +4,6 @@
 
 
 
-	<div class="menu trans_500">
-		<div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
-			<div class="menu_close_container"><div class="menu_close"></div></div>
-			<div class="logo menu_logo"><a href="index.html"><img src="images/logo.png" alt=""></a></div>
-			<ul>
-				<li class="menu_item"><a href="index.html">home</a></li>
-				<li class="menu_item"><a href="about.html">Ingressos</a></li>
-				<li class="menu_item"><a href="offers.html">Cruzeiros</a></li>
-				<li class="menu_item"><a href="blog.html">Feedback</a></li>
-				<li class="menu_item"><a href="contact.html">Sobre Nós</a></li>
-			</ul>
-		</div>
-	</div>
 
 	<!-- Home -->
 
@@ -35,6 +22,8 @@
 
 					<div class="home_slider_content text-center">
 						<div class="home_slider_content_inner" data-animation-in="flipInX" data-animation-out="animate-out fadeOut">
+							<h1 style="color:white; font-size: 70px">O mundo é um livro</h1>
+							<h2 style="color:white; font-size: 55px">e aquele que não viaja lê sempre a mesma página</h2>
 							<div class="button home_slider_button"><div class="button_bcg"></div><a href="#">Nosso Blog<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
@@ -56,11 +45,15 @@
 			<div class="row fill_height">
 				<div class="col fill_height" >
 					<div class="d-flex align-items-center justify-content-around flex-wrap" style="height: 100%;">
-						<a class="btn btn-primary" href="">
-							<img src="" alt="">
+						<a class="btn btn-primary" asp-action="Ingressos" asp-controller="Home">
+							<img src="images/ingressos.png" width="110px" alt="ingressos">
 						</a>
-						<a class="btn btn-primary" href="">Ingressos</a>
-						<a class="btn btn-primary" href="">Ingressos</a>
+						<a class="btn btn-primary" asp-action="Cruzeiros" asp-controller="Home">
+							<img src="images/navio.png" width="110px" alt="cruzeiro">
+						</a>
+						<a class="btn btn-primary" asp-action="Feedback" asp-controller="Home">
+							<img src="images/feedback.png" width="110px" alt="feedback">
+						</a>
 					</div>
 
 				</div>
@@ -114,7 +107,7 @@
 												<div class="test_name">Torre Eiffel</div>
 											</div>
 											<div class="test_quote_title">Paris</div>
-											<p class="test_quote_text">Esta joia da paisagem parisiense e símbolo máximo da França fica ainda mais espetacular quando vista de perto.</p>
+											<p class="test_quote_text">Esta joia da paisagem parisiense e símbolo máximo da França fica ainda  s espetacular quando vista de perto.</p>
 										</div>
 									</div>
 								</div>
