--- a/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="pt">
-    
+
 <head>
     <title>Amanda Puertas</title>
     <meta charset="utf-8">
@@ -64,15 +64,20 @@
                     <div class="row">
                         <div class="col main_nav_col d-flex flex-row align-items-center justify-content-start">
                             <div class="logo_container">
-                                <div class="logo"><a asp-action="Index" asp-controller="Home"><img src="~/images/logo.png" alt="" height="100"></a></div>
+                                <div class="logo"><a asp-action="Index" asp-controller="Home"><img
+                                            src="~/images/logo.png" alt="" height="100"></a></div>
                             </div>
                             <div class="main_nav_container ml-auto">
                                 <ul class="main_nav_list">
-                                    <li class="main_nav_item"><a asp-action="Index" asp-controller="Home">home</a></li>
-                                    <li class="main_nav_item"><a asp-action="Ingressos" asp-controller="Home">Ingressos</a></li>
-                                    <li class="main_nav_item"><a asp-action="Cruzeiros" asp-controller="Home">Cruzeiros</a></li>
-                                    <li class="main_nav_item"><a asp-action="Feedback" asp-controller="Home">Feedback</a></li>
-                                    <li class="main_nav_item"><a asp-action="Sobre" asp-controller="Home">Sobre Nós</a></li>
+                                    <li class="main_nav_item"><a asp-action="Index" asp-controller="Home">Home</a></li>
+                                    <li class="main_nav_item"><a asp-action="Ingressos"
+                                            asp-controller="Home">Ingressos</a></li>
+                                    <li class="main_nav_item"><a asp-action="Cruzeiros"
+                                            asp-controller="Home">Cruzeiros</a></li>
+                                    <li class="main_nav_item"><a asp-action="Feedback"
+                                            asp-controller="Home">Feedback</a></li>
+                                    <li class="main_nav_item"><a asp-action="Sobre" asp-controller="Home">Sobre Nós</a>
+                                    </li>
                                 </ul>
                             </div>
                             <div class="content_search ml-lg-0 ml-auto">
@@ -112,6 +117,24 @@
 
         </header>
 
+        <div class="menu trans_500">
+            <div class="menu_content d-flex flex-column align-items-center justify-content-center text-center">
+                <div class="menu_close_container">
+                    <div class="menu_close"></div>
+                </div>
+                <div class="logo menu_logo"><a asp-action="Index" asp-controller="Home"><img src="images/logo.png"
+                            alt=""></a></div>
+                <ul>
+                    <li class="menu_item"><a asp-action="Index" asp-controller="Home">Home</a></li>
+                    <li class="menu_item"><a asp-action="Ingressos" asp-controller="Home">Ingressos</a></li>
+                    <li class="menu_item"><a asp-action="Cruzeiros" asp-controller="Home">Cruzeiros</a></li>
+                    <li class="menu_item"><a asp-action="Feedback" asp-controller="Home">Feedback</a></li>
+                    <li class="menu_item"><a asp-action="Sobre" asp-controller="Home">Sobre Nós</a></li>
+                </ul>
+            </div>
+        </div>
+
+
         @RenderBody()
 
         <footer class="footer">
@@ -135,7 +158,8 @@
                                     </li>
                                     <li class="contact_info_item d-flex flex-row">
                                         <div>
-                                            <div class="contact_info_icon"><img src="~/images/telefone.png" alt=""></div>
+                                            <div class="contact_info_icon"><img src="~/images/telefone.png" alt="">
+                                            </div>
                                         </div>
                                         <div class="contact_info_text">(14) 3641-3906</div>
                                     </li>
@@ -155,8 +179,10 @@
                         <div class="footer_col">
                             <div class="footer_title">Localização</div>
                             <div class="footer_content footer_contact">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.2436832335266!2d-48.55377152452782!3d-22.495038623285847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c7458f09df92f7%3A0xc2b5216693383410!2sRua%20Ferrucio%20Bolla%2C%20106%20-%20Jardim%20Vista%20Alegre%2C%20Barra%20Bonita%20-%20SP%2C%2017340-232!5e0!3m2!1spt-BR!2sbr!4v1694789788454!5m2!1spt-BR!2sbr" 
-                                style="border:0" class="mt-4 w-100" height="100%" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3686.2436832335266!2d-48.55377152452782!3d-22.495038623285847!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c7458f09df92f7%3A0xc2b5216693383410!2sRua%20Ferrucio%20Bolla%2C%20106%20-%20Jardim%20Vista%20Alegre%2C%20Barra%20Bonita%20-%20SP%2C%2017340-232!5e0!3m2!1spt-BR!2sbr!4v1694789788454!5m2!1spt-BR!2sbr"
+                                    style="border:0" class="mt-4 w-100" height="100%" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
                             </div>
                         </div>
                     </div>
@@ -186,11 +212,15 @@
                         <div class="footer_nav_container d-flex flex-row align-items-center justify-content-lg-end">
                             <div class="footer_nav">
                                 <ul class="footer_nav_list">
-                                    <li class="main_nav_item"><a asp-action="Index" asp-controller="Home">home</a></li>
-                                    <li class="main_nav_item"><a asp-action="Ingressos" asp-controller="Home">Ingressos</a></li>
-                                    <li class="main_nav_item"><a asp-action="Cruzeiros" asp-controller="Home">Cruzeiros</a></li>
-                                    <li class="main_nav_item"><a asp-action="Feedback" asp-controller="Home">Feedback</a></li>
-                                    <li class="main_nav_item"><a asp-action="Sobre" asp-controller="Home">Sobre Nós</a></li>
+                                    <li class="main_nav_item"><a asp-action="Index" asp-controller="Home">Home</a></li>
+                                    <li class="main_nav_item"><a asp-action="Ingressos"
+                                            asp-controller="Home">Ingressos</a></li>
+                                    <li class="main_nav_item"><a asp-action="Cruzeiros"
+                                            asp-controller="Home">Cruzeiros</a></li>
+                                    <li class="main_nav_item"><a asp-action="Feedback"
+                                            asp-controller="Home">Feedback</a></li>
+                                    <li class="main_nav_item"><a asp-action="Sobre" asp-controller="Home">Sobre Nós</a>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -201,7 +231,7 @@
 
     </div>
 
-    
+
     @await RenderSectionAsync("Scripts", required: false)
 
 </body>
