Tornar site dinâmico

--- a/AmandaViagens/AmandaViagens/Views/Admin/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Admin/Index.cshtml
@@ -3,3 +3,25 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+<div class="container mt-5 pt-5" >
+    <div class="d-flex justify-content-center align-items-center">
+
+        <a asp-action="Index" asp-controller="Cruzeiro"
+            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+            <i class="bi bi-tsunami fs-1"></i>
+            Cruzeiros
+        </a>
+
+        <a asp-action="Index" asp-controller="Cruzeiro"
+            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+            <i class="bi bi-tsunami fs-1"></i>
+            Cruzeiros
+        </a>
+
+        <a asp-action="Index" asp-controller="Cruzeiro"
+            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+            <i class="bi bi-tsunami fs-1"></i>
+            Cruzeiros
+        </a>
+    </div>
+</div>
