--- a/AmandaViagens/AmandaViagens/Views/Account/Login.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Account/Login.cshtml
@@ -7,9 +7,9 @@
 <main class="container-fluid">
     <form method="post">
         <a asp-action="Index" asp-controller="Home"
-         class="d-flex align-items-center justify-content-center mb-5 text-decoration-none">
+         class="d-flex align-items-center justify-content-center mb-3 text-decoration-none">
             <div class="icon p-2 me-1">
-                <img class="img-fluid" src="~/images/logo.png" alt="Icon" style="width: 500px; height: 250px;">
+                <img class="img-fluid" src="~/images/logo.png" alt="Icon" >
             </div>
         </a>
 
@@ -34,9 +34,9 @@
             <label class="form-check-label" asp-for="Lembrar"></label>
         </div>
 
-        <button type="submit" class="w-100 btn btn-success">Entrar</button>
+        <button type="submit" class="w-100 btn btn-dark" style="background-color: #023959;">Entrar</button>
 
-        <a asp-action="Forget" class="d-block text-center mt-3 forgetPassword">Esqueceu sua Senha?</a>
+        @* <a asp-action="Forget" class="d-block text-center mt-3 forgetPassword">Esqueceu sua Senha?</a>
 
         <div class="separator">
             <div class="line"></div>
@@ -44,7 +44,7 @@
             <div class="line"></div>
         </div>
 
-        <a asp-action="Register" class="w-100 btn btn-info mt-1">Criar Conta</a>
+        <a asp-action="Register" class="w-100 btn btn-info mt-1">Criar Conta</a> *@
     </form>
 </main>
 
