--- a/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model List<AmandaViagens.Models.PontoTuristico>
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -24,7 +25,6 @@
 						<div class="home_slider_content_inner" data-animation-in="flipInX" data-animation-out="animate-out fadeOut">
 							<h1 style="color:white; font-size: 70px">O mundo é um livro</h1>
 							<h2 style="color:white; font-size: 55px">e aquele que não viaja lê sempre a mesma página</h2>
-							<div class="button home_slider_button"><div class="button_bcg"></div><a href="#">Nosso Blog<span></span><span></span><span></span></a></div>
 						</div>
 					</div>
 				</div>
@@ -80,74 +80,24 @@
 						<div class="owl-carousel owl-theme test_slider">
 
 							<!-- Testimonial Item -->
-							<div class="owl-item">
-								<div class="test_item">
-									<div class="test_image"><img src="~/images/pontos/cristo.jpg" alt="https://unsplash.com/@@anniegray"></div>
-									<div class="test_icon"><img src="~/images/backpack.png" alt=""></div>
-									<div class="test_content_container">
-										<div class="test_content">
-											<div class="test_item_info">
-												<div class="test_name">Cristo Redentor</div>
+							@foreach (var ponto in Model)
+							{
+								<div class="owl-item">
+									<div class="test_item">
+										<div class="test_image"><img src="@ponto.Image" alt="https://unsplash.com/@@anniegray"></div>
+										<div class="test_icon"><img src="@ponto.Icone" alt=""></div>
+										<div class="test_content_container">
+											<div class="test_content">
+												<div class="test_item_info">
+													<div class="test_name">@ponto.Nome</div>
+												</div>
+												<p class="test_quote_text">@Html.Raw(ponto.Descricao)</p>
 											</div>
-											<div class="test_quote_title">Rio de Janeiro</div>
-											<p class="test_quote_text">De braços abertos sobre a Guanabara, o Cristo Redentor recebe os visitantes e abençoa os cariocas.</p>
 										</div>
 									</div>
 								</div>
-							</div>
-
-							<!-- Testimonial Item -->
-							<div class="owl-item">
-								<div class="test_item">
-									<div class="test_image"><img src="images/pontos/torre.jpg" alt="https://unsplash.com/@@tschax"></div>
-									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
-									<div class="test_content_container">
-										<div class="test_content">
-											<div class="test_item_info">
-												<div class="test_name">Torre Eiffel</div>
-											</div>
-											<div class="test_quote_title">Paris</div>
-											<p class="test_quote_text">Esta joia da paisagem parisiense e símbolo máximo da França fica ainda  s espetacular quando vista de perto.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Testimonial Item -->
-							<div class="owl-item">
-								<div class="test_item">
-									<div class="test_image"><img src="images/pontos/praia.jpeg" alt="https://unsplash.com/@@seefromthesky"></div>
-									<div class="test_icon"><img src="images/island_t.png" alt=""></div>
-									<div class="test_content_container">
-										<div class="test_content">
-											<div class="test_item_info">
-												<div class="test_name">Punta Cana</div>
-											</div>
-											<div class="test_quote_title">República Dominicana</div>
-											<p class="test_quote_text">A tropical Punta Cana se orgulha de ser um dos melhores destinos do Caribe, e sua fama é, de fato, justificada.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Testimonial Item -->
-							<div class="owl-item">
-								<div class="test_item">
-									<div class="test_image"><img src="images/pontos/sul.jpeg" alt=""></div>
-									<div class="test_icon"><img src="images/backpack.png" alt=""></div>
-									<div class="test_content_container">
-										<div class="test_content">
-											<div class="test_item_info">
-												<div class="test_name">Gramado</div>
-											</div>
-											<div class="test_quote_title">Rio Grande do Sul</div>
-											<p class="test_quote_text"> Romântica, charmosa, cheia de cultura, belas paisagens, atrações e ótima culinária.</p>
-										</div>
-									</div>
-								</div>
-							</div>
-
-
+							}
+							
 
 						</div>
 
