--- a/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_Layout.cshtml
@@ -47,11 +47,7 @@
                                                 aria-hidden="true"></i></a></li>
                                 </ul>
                             </div>
-                            <div class="user_box ml-auto">
-                                <div class="user_box_login user_box_link"><a href="login.html">login</a></div>
-                                <div class="user_box_register user_box_link"><a href="cadastro.html">cadastre-se</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -122,7 +118,7 @@
                 <div class="menu_close_container">
                     <div class="menu_close"></div>
                 </div>
-                <div class="logo menu_logo"><a asp-action="Index" asp-controller="Home"><img src="images/logo.png"
+                <div class="logo menu_logo"><a asp-action="Index" asp-controller="Home"><img src="~/images/logo.png"
                             alt=""></a></div>
                 <ul>
                     <li class="menu_item"><a asp-action="Index" asp-controller="Home">Home</a></li>
