--- a/AmandaViagens/AmandaViagens/Views/Shared/_LayoutAccount.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_LayoutAccount.cshtml
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amanda Puertas Viagens & Turismo | @ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="~/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="~/images/logosmall.jpg">
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="~/css/account.css" />
     @await RenderSectionAsync("Styles", required: false)
