--- a/AmandaViagens/AmandaViagens/Views/Shared/_LayoutAdmin.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_LayoutAdmin.cshtml
@@ -5,11 +5,11 @@
     <script src="~/js/color-modes.js"></script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GalloFlix | @ViewData["Title"]</title>
+    <title>AmandaViagens | @ViewData["Title"]</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/admin.css" asp-append-version="true" />
-    <link rel="icon" type="image/x-icon" href="~/images/logo.png">
+    <link rel="icon" type="image/x-icon" href="~/images/logosmall.jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
     @await RenderSectionAsync("Styles", required: false)
@@ -30,33 +30,27 @@
                 <hr>
                 <ul class="nav nav-pills flex-column mb-auto">
                     <li class="nav-item">
-                        <a asp-action="Index" asp-controller="Cruzeiros" class="nav-link @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-speedometer2 me-2"></i>
+                        <a asp-action="Index" asp-controller="Admin" class="nav-link @(ViewBag.Title == "Dashboard" ? "active" : "link-body-emphasis")">
+                            <i class="bi bi-home"></i>
+                            Painel
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a asp-action="Index" asp-controller="Cruzeiro" class="nav-link @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+                            <i class="bi bi-tsunami"></i>
                             Cruzeiros
                         </a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="Ingressos" class="nav-link @(ViewBag.Title == "Ingressos" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-house me-2"></i>
+                        <a asp-action="Index" asp-controller="Ingresso" class="nav-link @(ViewBag.Title == "Ingressos" ? "active" : "link-body-emphasis")">
+                            <i class="bi bi-ticket-perforated"></i>
                             Ingressos
                         </a>
                     </li>
                     <li>
-                        <a asp-action="Index" asp-controller="PontoTuristicos" class="nav-link @(ViewBag.Title == "Pontos Turisticos" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-list-stars me-2"></i>
+                        <a asp-action="Index" asp-controller="PontoTuristico" class="nav-link @(ViewBag.Title == "Pontos Turisticos" ? "active" : "link-body-emphasis")">
+                            <i class="bi bi-geo-alt"></i>
                             Pontos Turisticos
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link @(ViewBag.Title == "Agentes" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-people-fill me-2"></i>
-                            Agentes
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="nav-link @(ViewBag.Title == "Avaliações" ? "active" : "link-body-emphasis")">
-                            <i class="bi bi-chat-text-fill me-2"></i>
-                            Avaliações
                         </a>
                     </li>
                 </ul>
@@ -64,13 +58,13 @@
                 <partial name="_LoginPartialAdmin"></partial>
             </div>
 
-            <div class="container-fluid py-2">
+            <div class="container-fluid py-2" >
                 <nav class="navbar sticky-top border-bottom">
                     <button id="sidebarToggler" class="navbar-toggler border-0 p-0" type="button" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </nav>
-                <div class="container-fluid p-3">
+                <div class="container-fluid p-3" >
                     @RenderBody()
                 </div>
             </div>
