--- a/AmandaViagens/AmandaViagens/Views/Shared/_StyleSwitcher.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Shared/_StyleSwitcher.cshtml
@@ -19,7 +19,7 @@
 </svg>
 
 <div class="dropdown position-fixed bottom-0 end-0 mb-2 me-2 bd-mode-toggle">
-    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button"
+    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center" style="background-color: #023959" id="bd-theme" type="button"
         aria-expanded="false" data-bs-toggle="dropdown" aria-label="Toggle theme (auto)">
         <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
             <use href="#circle-half"></use>
