--- a/AmandaViagens/AmandaViagens/wwwroot/css/admin.css
+++ b/AmandaViagens/AmandaViagens/wwwroot/css/admin.css
@@ -7,12 +7,12 @@ main {
 }
 
 .nav-link:hover {
-  background-color: #19705c !important;
+  background-color: #023959!important;
   color: white !important;
 }
 
 .nav-link.active {
-  background-color: #00B98E !important;
+  background-color: #023959 !important;
   color: white !important;
 }
 
