--- a/AmandaViagens/AmandaViagens/Views/Admin/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Admin/Index.cshtml
@@ -7,21 +7,21 @@
     <div class="d-flex justify-content-center align-items-center">
 
         <a asp-action="Index" asp-controller="Cruzeiro"
-            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+            class="fs-1 p-5 me-2 btn btn-light" style="background-color: #F2E1AE;  @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
             <i class="bi bi-tsunami fs-1"></i>
             Cruzeiros
         </a>
 
         <a asp-action="Index" asp-controller="Cruzeiro"
-            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
-            <i class="bi bi-tsunami fs-1"></i>
-            Cruzeiros
+            class="fs-1 p-5 me-2 btn btn-light" style="background-color: #46A6A6;  @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
+            <i class="bi bi-ticket-perforated fs-1"></i>
+            Ingressos
         </a>
 
         <a asp-action="Index" asp-controller="Cruzeiro"
-            class="fs-1 p-5 me-2 btn btn-info @(ViewBag.Title == "Cruzeiros" ? "active" : "link-body-emphasis")">
-            <i class="bi bi-tsunami fs-1"></i>
-            Cruzeiros
+            class="fs-1 p-5 me-2 btn btn-dark" style="background-color: #023959; @(ViewBag.Title == "Cruzeiros"? "active" : "link-body-emphasis")">
+            <i class="bi bi-geo-alt fs-1"></i>
+            Pontos Turísticos
         </a>
     </div>
 </div>
