--- a/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Ingressos.cshtml
@@ -41,7 +41,7 @@
 					<div class="col-lg-8">
 						<div class="offers_content">
 							<div class="offers_price my-2">R$ @ingresso.Preco<span>por ingresso</span></div>
-							<p class="offers_text mb-2">@Html.Raw(ingresso.Descricao)</p>
+							<p class="offers_text">@Html.Raw(ingresso.Descricao)</p>
 						</div>
 					</div>
 				</div>
