--- a/AmandaViagens/AmandaViagens/Views/PontoTuristico/Index.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/PontoTuristico/Index.cshtml
@@ -43,12 +43,12 @@
                     @Html.DisplayFor(modelItem => item.Icone)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-title="Editar Cruzeiro"><i
+                    <a asp-action="Edit" asp-route-id="@item.Id" data-bs-toggle="tooltip" data-bs-title="Editar Ponto Turístico"><i
                             class="bi bi-pencil-fill"></i></a> |
                     <a asp-action="Details" asp-route-id="@item.Id" data-bs-toggle="tooltip"
                         data-bs-title="Exibir Detalhes"><i class="bi bi-search"></i></a> |
                     <a asp-action="Delete" asp-route-id="@item.Id" data-bs-toggle="tooltip"
-                        data-bs-title="Excluir Cruzeiro"><i class="bi bi-trash-fill"></i></a>
+                        data-bs-title="Excluir Ponto Turístico"><i class="bi bi-trash-fill"></i></a>
                 </td>
             </tr>
         }
