--- a/AmandaViagens/AmandaViagens/Views/Cruzeiro/Create.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Cruzeiro/Create.cshtml
@@ -38,8 +38,8 @@
         </div>
     </div>
     <div class="col-12 mt-4">
-        <button type="submit" class="btn btn-success me-3"><i class="bi bi-save2-fill"></i> Salvar</button>
-        <a asp-action="Index" class="btn btn-primary"><i class="bi bi-arrow-left-circle-fill"></i> Voltar a
+        <button type="submit" class="btn btn-dark me-3"><i class="bi bi-save2-fill"></i> Salvar</button>
+        <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;"><i class="bi bi-arrow-left-circle-fill"></i> Voltar a
             Listagem</a>
     </div>
 
