--- a/AmandaViagens/AmandaViagens/Views/Cruzeiro/Details.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Cruzeiro/Details.cshtml
@@ -1,43 +1,36 @@
 @model AmandaViagens.Models.Cruzeiro
-
 @{
     ViewData["Title"] = "Cruzeiros";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>Cruzeiro</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descricao)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descricao)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Preco)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Preco)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Image)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Image)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<h1 class="display-4">Cruzeiros</h1>
+<h4 class="display-6">Detalhes</h4>
+<hr />
+<div class="row">
+    <div class="col-md-4 col-sm-12 col-xxl-3">
+        <div class="form-group">
+            <label asp-for="Image" class="form-label"></label>
+            <img src='@Url.Content("~/" + Model.Image)' class="img-fluid w-100">
+        </div>
+    </div>
+    <div class="col-md-8 col-sm-12 col-xxl-9">
+        <div class="col-12 mb-2">
+            <label asp-for="Nome" class="form-label"></label>
+            <input asp-for="Nome" class="form-control" disabled/>
+        </div>
+        <div class="col-12 mb-2">
+            <label asp-for="Preco" class="form-label"></label>
+            <input asp-for="Preco" class="form-control" disabled/>
+        </div>
+        <div class="col-12 mb-2">
+            <label asp-for="Descricao" class="form-label"></label>
+            <textarea asp-for="Descricao" class="form-control" rows="3" disabled></textarea>
+        </div>
+       
+    </div>
+    <div class="col-12 mt-4">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-dark me-3"><i class="bi bi-pencil-fill"></i> Editar</a>
+        <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;"><i class="bi bi-arrow-left-circle-fill"></i> Voltar a Listagem</a>
+    </div>
 </div>
