--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -24,107 +24,28 @@
 					<div class="offers_grid">
 
 						<!-- Offers Item -->
-
+						@foreach (var cruzeiro in Model)
+						{
 						<div class="offers_item rating_4">
 							<div class="row">
 								<div class="col-lg-1 temp_col"></div>
 								<div class="col-lg-3 col-1680-4">
 									<div class="offers_image_container">
 										<!-- Image by https://unsplash.com/@@kensuarez -->
-										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_1.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">MSC PREZIOSA</a></div>
+										<div class="offers_image_background" 
+											style="background-image:url('@Url.Content("../" + cruzeiro.Image)')"></div>
+										<div class="offer_name"><a href="single_listing.html">@cruzeiro.Nome</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
 									<div class="offers_content">
-										<div class="offers_price">R$4.590 <span>por pessoa</span></div>
-										<p class="offers_text">América do Sul</p>
-										<p class="offers_text">7 Noites</p>
-										<p class="offers_text">Saindo de: Santos (São Paulo) </p>
-										<p class="offers_text">Porto de desembarque: Santos (São Paulo)</p>
+										<div class="offers_price">R$ @cruzeiro.Preco<span>por pessoa</span></div>
+										<p class="offers_text mb-2">@Html.Raw(cruzeiro.Descricao)</p>
 									</div>
 								</div>
 							</div>
 						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_3">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@@thoughtcatalog -->
-										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_2.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">Costa Fascinosa</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">R$4.646,25<span>por pessoa</span></div>
-										<p class="offers_text">América do Sul</p>
-										<p class="offers_text">9 Dias</p>
-										<p class="offers_text">Saindo de: Rio de Janeiro (Rio de Janeiro) </p>
-										<p class="offers_text">Porto de desembarque: Rio de Janeiro (Rio de Janeiro)</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_5 mb-5">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@@mindaugas -->
-										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_3.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">NORWEGIAN SPIRIT</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">R$3.463,00<span>por pessoa</span></div>
-										<p class="offers_text">Pacífico Sul: Kauai & Moorea</p>
-										<p class="offers_text">12 Dias</p>
-										<p class="offers_text">Saindo de: Honolulu, Oahu </p>
-										<p class="offers_text">Porto de desembarque: Papeete, Taiti, Polinésia Francesa</p>
-										<div class="offer_reviews">
-											
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						<div class="offers_item rating_4 mb-5">
-							<div class="row">
-								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
-									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@@rktkn -->
-										<div class="offers_image_background" style="background-image:url(../images/cruzeiros/offer_4.jpg)"></div>
-										<div class="offer_name"><a href="single_listing.html">Rhapsody of the Seas</a></div>
-									</div>
-								</div>
-								<div class="col-lg-8">
-									<div class="offers_content">
-										<div class="offers_price">R$941<span>por pessoa</span></div>
-										<p class="offers_text">Bahamas & Perfect Day Cruise</p>
-										<p class="offers_text">3 Noites</p>
-										<p class="offers_text">Saindo de: Fort Lauderdale, Flórida</p>
-										<p class="offers_text">Porto de desembarque: Fort Lauderdale, Flórida</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- Offers Item -->
-
-						
+						}
 
 					</div>
 				</div>
