--- a/AmandaViagens/AmandaViagens/Views/PontoTuristico/Create.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/PontoTuristico/Create.cshtml
@@ -5,6 +5,10 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+<h1 class="display-4">Pontos Turísticos</h1>
+<h4 class="display-6">Adicionar</h4>
+
+
 <form asp-action="Create" class="row" enctype="multipart/form-data">
     <div class="col-md-9 col-sm-12">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -28,8 +32,8 @@
         </div>
     </div>
     <div class="col-12 mt-4">
-        <button type="submit" class="btn btn-success me-3"><i class="bi bi-save2-fill"></i> Salvar</button>
-        <a asp-action="Index" class="btn btn-primary"><i class="bi bi-arrow-left-circle-fill"></i> Voltar a
+        <button type="submit" class="btn btn-dark me-3"><i class="bi bi-save2-fill"></i> Salvar</button>
+        <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;"><i class="bi bi-arrow-left-circle-fill"></i> Voltar a
             Listagem</a>
     </div>
 
