--- a/AmandaViagens/AmandaViagens/Views/PontoTuristico/Delete.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/PontoTuristico/Delete.cshtml
@@ -5,11 +5,11 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Deletar</h1>
+<h3>Tem certeza de que deseja excluir esse Ponto Turístico?</h3>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>PontoTuristico</h4>
+    <h4>Ponto Turístico</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -40,7 +40,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Deletar" class="btn btn-dark"/> |
+        <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;">Voltar para Lista</a>
     </form>
 </div>
