--- a/AmandaViagens/AmandaViagens/Views/PontoTuristico/Details.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/PontoTuristico/Details.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Details</h1>
+<h1>Detalhes</h1>
 
 <div>
-    <h4>PontoTuristico</h4>
+    <h4>Ponto Turístico</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -38,6 +38,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-dark" asp-route-id="@Model?.Id">Editar</a> |
+    <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;">Voltar para Lista</a>
 </div>
