--- a/AmandaViagens/AmandaViagens/Views/PontoTuristico/Edit.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/PontoTuristico/Edit.cshtml
@@ -5,46 +5,63 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h1>Edit</h1>
+<h1 class="display-4">Pontos Turísticos</h1>
+<h4 class="display-6">Editar</h4>
 
-<h4>PontoTuristico</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
-                <span asp-validation-for="Descricao" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Icone" class="control-label"></label>
-                <input asp-for="Icone" class="form-control" />
-                <span asp-validation-for="Icone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
+<form asp-action="Edit" class="row">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="col-md-9 col-sm-12">
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <label asp-for="Nome" class="control-label"></label>
+            <input asp-for="Nome" class="form-control" />
+            <span asp-validation-for="Nome" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Descricao" class="control-label"></label>
+            <input asp-for="Descricao" class="form-control" />
+            <span asp-validation-for="Descricao" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Icone" class="control-label"></label>
+            <input asp-for="Icone" class="form-control" />
+            <span asp-validation-for="Icone" class="text-danger"></span>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div class="col-md-3 col-sm-12">
+        <div class="form-group">
+            <label asp-for="Image" class="control-label"></label>
+            <img id="PreviewImage" src='@Url.Content("~/" + Model.Image)' class="img-fluid w-100 pointer"
+                onclick="changeImage()">
+            <input type="file" name="formFile" class="form-control" accept=".jpg,.jpeg,.png,.gif,.jfif" />
+            <input asp-for="Image" class="d-none" />
+        </div>
+    </div>
+    <div class="col-12 mt-4">
+        <button type="submit" class="btn btn-dark me-3"><i class="bi bi-save2-fill"></i> Salvar</button>
+        <a asp-action="Index" class="btn btn-dark" style="background-color: #023959;"><i
+                class="bi bi-arrow-left-circle-fill"></i> Voltar a
+            Listagem</a>
+    </div>
+</form>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+    <script>
+        function changeImage() {
+            document.querySelector('input[type="file"]').click();
+        }
+
+        window.addEventListener('load', function () {
+            document.querySelector('input[type="file"]').addEventListener('change', function () {
+                if (this.files && this.files[0]) {
+                    var img = document.getElementById('PreviewImage');
+                    img.src = URL.createObjectURL(this.files[0]);
+                }
+            });
+        });
+    </script>
 }
