--- a/AmandaViagens/AmandaViagens/Views/Cruzeiro/Delete.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Cruzeiro/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1 class="display-4">Cruzeiros</h1>
-<h4 class="display-6">Detalhes</h4>
+<h4 class="display-6">Excluir</h4>
 <hr />
 <h3 class="text-danger">Confirma a exclusão desse Cruzeiro?</h3>
 <div class="row">
