--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -34,7 +34,7 @@
 										<!-- Image by https://unsplash.com/@@kensuarez -->
 										<div class="offers_image_background" 
 											style="background-image:url('@Url.Content("../" + cruzeiro.Image)')"></div>
-										<div class="offer_name"><a href="single_listing.html">@cruzeiro.Nome</a></div>
+										<div class="offer_name"><a href="">@cruzeiro.Nome</a></div>
 									</div>
 								</div>
 								<div class="col-lg-8">
@@ -45,6 +45,7 @@
 								</div>
 							</div>
 						</div>
+						<br>
 						}
 
 					</div>
