--- a/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
+++ b/AmandaViagens/AmandaViagens/Views/Home/Cruzeiros.cshtml
@@ -29,9 +29,8 @@
 						<div class="offers_item rating_4">
 							<div class="row">
 								<div class="col-lg-1 temp_col"></div>
-								<div class="col-lg-3 col-1680-4">
+								<div class="col-lg-3 col-1680-4" style="height:300px">
 									<div class="offers_image_container">
-										<!-- Image by https://unsplash.com/@@kensuarez -->
 										<div class="offers_image_background" 
 											style="background-image:url('@Url.Content("../" + cruzeiro.Image)')"></div>
 										<div class="offer_name"><a href="">@cruzeiro.Nome</a></div>
